@@ -287,6 +287,7 @@ class _OperationsUnified(_mixin_mapping):
         1005: "operations__redis_prime",
         1006: "operations__nginx_cache_expire",
         1007: "operations__nginx_cache_flush",
+        1008: "operations__reconcile_cas",
     }
 
 
